--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@mantine/core": "^6.0.0",
+    "@mantine/form": "^6.0.15",
     "@mantine/hooks": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
